创建新的界面开始吧

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </receiver>
 
         <activity
-            android:name=".app.main.MainActivity"
+            android:name=".app.talk.TalkActivity"
             android:launchMode="singleTask"
             android:exported="true"
             android:screenOrientation="portrait">
