--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,11 +102,5 @@ dependencies {
 	api "androidx.recyclerview:recyclerview:$androidX"
 
 	implementation "androidx.viewpager2:viewpager2:1.0.0"
-
-//	// Import the BoM for the Firebase platform
-//	implementation platform('com.google.firebase:firebase-bom:26.1.0')
-//	// Declare the dependencies for the Crashlytics and Analytics libraries
-//	// When using the BoM, you don't specify versions in Firebase library dependencies
-//	implementation 'com.google.firebase:firebase-crashlytics'
-//	implementation 'com.google.firebase:firebase-analytics'
+	implementation 'androidx.appcompat:appcompat:1.6.1'
 }
