--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,9 @@ dependencies {
 
 	implementation "androidx.viewpager2:viewpager2:1.0.0"
 	implementation 'androidx.appcompat:appcompat:1.6.1'
+
+	implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+//	implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:4.0.3"
+
+
 }
