--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,5 +104,6 @@ dependencies {
 	implementation "androidx.viewpager2:viewpager2:1.0.0"
 	implementation 'androidx.appcompat:appcompat:1.6.1'
 	implementation 'com.google.android.material:material:1.10.0'
+	implementation 'org.xutils:xutils:3.8.12'
 
 }
