--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:icon="@mipmap/audio_recorder_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/audio_recorder_logo"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        >
         <receiver
             android:name=".RecordingWidget"
             android:exported="true">
@@ -38,7 +40,9 @@
             android:name=".app.talk.TalkActivity"
             android:launchMode="singleTask"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
