--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,10 @@
-#Sat Jun 06 12:53:24 EEST 2020
+#Tue Nov 21 12:04:26 CST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+#distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+#distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-8.0-bin.zip
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-bin.zip
+
+
