--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
 	compileSdkVersion 34
 	defaultConfig {
 		applicationId "com.perry.audiorecorder"
-		minSdkVersion 21
+		minSdkVersion 24
 		targetSdkVersion 34
 		versionCode 933
 		versionName "0.9.33"
@@ -107,7 +107,8 @@ dependencies {
 	def androidX = "1.3.0"
 	def coroutines = "1.6.1"
 	def timber = "5.0.1"
-
+	implementation project(path: ':paddleSpeech')
+	implementation project(path: ':paddlespeech_tts_cpp')
 	//Kotlin
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
