--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,8 +107,10 @@ dependencies {
 	def androidX = "1.3.0"
 	def coroutines = "1.6.1"
 	def timber = "5.0.1"
-	implementation project(path: ':paddleSpeech')
-	implementation project(path: ':paddlespeech_tts_cpp')
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
+	implementation files('libs/AIKit.aar')
+//	implementation project(path: ':paddleSpeech')
+//	implementation project(path: ':paddlespeech_tts_cpp')
 	//Kotlin
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
