--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,9 @@ android {
 		applicationId "com.perry.audiorecorder"
 		minSdkVersion 24
 		targetSdkVersion 34
-		versionCode 933
-		versionName "0.9.33"
+		versionCode 1
+		versionName appVersionName
+		flavorDimensions "versionCode"
 	}
 
 	buildFeatures {
@@ -32,46 +33,44 @@ android {
 	keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 	signingConfigs {
-		dev {
-			storeFile file('key/debug/debug.keystore')
-			storePassword 'android'
-			keyAlias 'androiddebugkey'
-			keyPassword 'android'
-		}
-		release {
-			storeFile file(keystoreProperties['prodStoreFile'])
-			storePassword keystoreProperties['prodStorePassword']
-			keyAlias keystoreProperties['prodKeyAlias']
-			keyPassword keystoreProperties['prodKeyPassword']
+		config {
+			keyAlias 'lipengjun'
+			keyPassword 'lipengjun'
+			storeFile file('../lipengjun.keystore')
+			storePassword 'lipengjun'
 		}
 	}
 
 	buildTypes {
 		release {
+			debuggable true
+			//            是否进行混淆
 			minifyEnabled true
 			shrinkResources true
+			//            混淆文件 第一个是系统混淆文件 第二个是自定义混淆文件
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+			signingConfig signingConfigs.config
 //			firebaseCrashlytics {
 //				mappingFileUploadEnabled true
 //			}
 		}
 		debug {
 			minifyEnabled false
+			signingConfig signingConfigs.config
 		}
 	}
 
-	flavorDimensions "default"
-
 	productFlavors {
-		debugConfig {
-			dimension "default"
-			applicationId "com.perry.audiorecorder.debug"
-			signingConfig = signingConfigs.dev
-		}
+//		debugConfig {
+////			dimension "default"
+//			applicationId "com.perry.audiorecorder.debug"
+//			signingConfig = signingConfigs.config
+//		}
 		releaseConfig {
-			dimension "default"
-			signingConfig = signingConfigs.dev
+//			dimension "default"
+			signingConfig = signingConfigs.config
 			applicationId "com.perry.audiorecorder"
+			manifestPlaceholders = [app_name: "无崖"]
 		}
 	}
 
@@ -83,6 +82,22 @@ android {
 	lintOptions {
 		abortOnError false
 	}
+
+	android.applicationVariants.all {
+		variant ->
+			variant.outputs.all {
+				//只处理生产版本
+//                if (buildType.name == 'release') {
+//                    def createTime = new Date().format("YYYY-MM-dd-HHmm", TimeZone.getTimeZone("GMT+08:00"))
+				// app包名称
+//          outputFileName = "${productFlavors.manifestPlaceholders.app_name}"+ productFlavors.applicationId +"_" + defaultConfig.versionName + "_" + buildType.name + ".apk"
+				outputFileName = "${productFlavors.manifestPlaceholders.app_name}" + "" + defaultConfig.versionName + "_" + buildType.name + ".apk"
+				////指定release输出到指定文件夹
+//                    variant.getPackageApplication().outputDirectory = new File(config.appReleaseDir + "/${createTime}")
+//                }
+			}
+	}
+
 }
 
 //tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile.class){
@@ -92,16 +107,24 @@ android {
 //}
 
 // Remove not needed buildVariants.
-android.variantFilter { variant ->
-	if (variant.buildType.name == 'release'
-			&& variant.getFlavors().get(0).name == 'debugConfig') {
-		variant.setIgnore(true)
-	}
-	if (variant.buildType.name == 'debug'
-			&& variant.getFlavors().get(0).name == 'releaseConfig') {
-		variant.setIgnore(true)
-	}
+//android.variantFilter { variant ->
+//	if (variant.buildType.name == 'release'
+//			&& variant.getFlavors().get(0).name == 'debugConfig') {
+//		variant.setIgnore(true)
+//	}
+//	if (variant.buildType.name == 'debug'
+//			&& variant.getFlavors().get(0).name == 'releaseConfig') {
+//		variant.setIgnore(true)
+//	}
+//}
+
+
+def getAppVersionName() {
+	def createTime = new Date().format("yyyy.MM.dd-HH.mm", TimeZone.getTimeZone("GMT+08:00"))
+	String versionName = createTime
+	return versionName
 }
+def appVersionName = getAppVersionName()
 
 dependencies {
 	def androidX = "1.3.0"
