--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:name=".ARApplication"
         android:hardwareAccelerated="@bool/useHardwareAcceleration"
         android:icon="@mipmap/audio_recorder_logo"
-        android:label="@string/app_name"
+        android:label="${app_name}"
         android:roundIcon="@mipmap/audio_recorder_logo"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
